<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E车E拍</string>
    <string name="label_file_browser">档案浏览</string>
    <string name="label_camera_control">相机控制</string>
    <string name="label_network_configurations">连线设定</string>
    <string name="function_titleName">专车专用行车记录仪</string>
    <string name="label_camera_settings">相机设定</string>
    <string name="label_video_resolution">影像解析度</string>
    <string name="label_image_resolution">视频分段</string>
    <string name="label_motion_detection">移动侦测</string>
    <string name="title_activity_local_file_list">E车E拍</string>
    <string name="label_net_disconnected">连接</string>
    <string name="label_Close">关闭</string>
    <string name="label_on">开</string>
    <string name="label_off">关</string>
    <string name="label_flicker_frequency">闪烁频率</string>
    <string name="label_50Hz">50Hz</string>
    <string name="label_60Hz">60Hz</string>
    <string name="label_white_balance">白平衡</string>
    <string name="label_auto">自动</string>
    <string name="label_daylight">日光</string>
    <string name="label_fluorescent">熒光燈</string>
    <string name="label_brightness">亮度</string>
    <string name="label_contrast">对比</string>
    <string name="label_exposure">曝光</string>
    <string name="label_ip_camera_control">相机控制</string>
    <string name="label_ip_camera_preview">相机预览</string>
    <string name="label_ip_camera_browser">相机档案浏览</string>
    <string name="label_local_album">手机相本</string>
    <string name="label_wifi_ssid">WiFi SSID</string>
    <string name="label_encryption_key">密码</string>
    <string name="label_update">更新</string>
    <string name="label_re_activate_network">重新启动连线</string>
    <string name="label_find_camera">寻找相机</string>
    <string name="label_title">名称</string>
    <string name="label_time0">0:00</string>
    <string name="label_app_snapshot">高清抓拍</string>
    <string name="label_app_record">开始录制</string>
    <string name="label_stop_record">停止录影</string>
    <string name="dialog_no_connection_title">请检查连线设定:</string>
    <string name="dialog_no_connection_message">1. 确认相机WiFi已开启.\n2. 确认手机WiFi已开启.\n3. 将手机连线至相机.</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">取消</string>
    <string name="label_open">开启</string>
    <string name="label_save">储存</string>
    <string name="label_delete">删除</string>
    <string name="label_connect">连线</string>
    <string name="label_video">录影</string>
    <string name="label_image">拍照</string>
    <string name="label_camera_snapshot">相机快照</string>
    <string name="label_camera_record">相机录影</string>
    <string name="label_camera_stop_record">相机停止录影</string>
    <string name="label_camera_language">语言</string>
    <string name="message_command_succeed">指令成功!</string>
    <string name="message_command_failed">指令失败!</string>
    <string name="message_command_camer">抓拍成功！</string>
    <string name="message_command_uncamer">抓拍失败！</string>
    <string name="message_fail_get_info">无法取得相机资讯.</string>
    <string name="error_no_ssid">请输入 WiFi SSID.</string>
    <string name="error_ssid_too_long">SSID 超过长度限制.</string>
    <string name="error_no_key">请输入密码.</string>
    <string name="error_key_too_short">密码字元过少.</string>
    <string name="error_key_too_long">密码字元过多.</string>
    <string name="label_language">语言</string>
    <string name="label_default">系统默认</string>
    <string name="label_reading">读取</string>
    <string name="label_items">项目</string>
    <string name="message_save_video">影像档案将储存在【手机文档】</string>
    <string name="message_start_recording">开始录影</string>
    <string name="label_language_TChinese">繁體中文</string>
    <string name="label_language_SChinese">简体中文</string>
    <string name="label_language_Russian">Русский</string>
    <string name="label_language_Spanish">español</string>
    <string name="label_language_Portuguese">português</string>
    <string name="label_language_French">français</string>
    <string name="label_language_Italian">italiano</string>
    <string name="label_language_Germany">Deutsch</string>
    <string name="label_language_Czech">čeština</string>
    <string name="label_language_Japanese">日本語</string>
    <string name="label_language_Korean">한국의</string>
    <string name="label_language_Latvian">Latvijas</string>
    <string name="label_language_Polish">polski</string>
    <string name="label_language_Romanian">român</string>
    <string name="label_language_Slovak">slovenský</string>
    <string name="label_language_Ukrainian">Український</string>
    <string name="app_Version">应用程序版本</string>
    <string name="FW_Version">软件版本</string>
    <string name="label_delete_files">刪除档案</string>
    <string name="AWB_Auto">自动</string>
    <string name="AWB_Daylight">日光</string>
    <string name="AWB_Cloudy">阴天</string>
    <string name="AWB_Fluorescent_W">荧光灯. (亮白)</string>
    <string name="AWB_Fluorescent_N">荧光灯. (自然)</string>
    <string name="AWB_Fluorescent_D">荧光灯. (日光)</string>
    <string name="AWB_Incandescent">钨丝灯</string>
    <string name="Delete_Current_File">刪除目前 文件</string>
    <string name="Delete_All_Images">刪除所有照片</string>
    <string name="Delete_All_Videos">刪除所有視頻</string>
    <string name="label_Off">关闭</string>
    <string name="label_Low">低</string>
    <string name="label_Middle">中</string>
    <string name="label_High">高</string>
    <string name="Flicker_50">50 HZ</string>
    <string name="Flicker_60">60 HZ</string>
    <string name="dialog_DHCP_error">请检查DHCP设定</string>
    <string name="Timesettings">时间设置</string>
    <string name="SyncDevice">与装置同步</string>
    <string name="SyncDeviceBTN">点击按钮与装置同步</string>
    <string name="main_title">行车拍拍</string>
    <string name="main_title_detail">指尖上的行车记录神器</string>
    <string name="main_video">录像视图</string>
    <string name="main_dv">SD档案</string>
    <string name="main_local">手机文档</string>
    <string name="main_settings">设置</string>
    <string name="open">打开</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="label_download">下载</string>
    <string name="label_DV_quality">录像质量</string>
    <string name="label_move">移动侦测</string>
    <string name="label_TV_style">闪烁频率</string>
    <string name="label_version">版本信息</string>
    <string name="label_record_setting">录音设置</string>
    <string name="dialog_no_connection_message_wifi">将手机与录像机WiFi互联</string>
    <string name="dialog_no_connection_message_video_open">确认摄像机已开启</string>
    <string name="dialog_no_connection_message_open_wifi">开启手机WiFi连接</string>
    <string name="dialog_no_connection_message_title">请检查你的连线设定</string>
    <string name="connecting_to_camera">Connecting to Camera</string>
    <string name="loading">正在加载中...</string>
    <string name="version_hardware">固件版本号</string>
    <string name="version_software">软件版本号</string>
    <string name="help">使用指南</string>
    <string name="minutes">分钟</string>
    <string name="verify">版本校验</string>
    <string name="verify_error">请确认已连接到行车记录仪！</string>
    <string name="recording">  录制中</string>
    <string name="downloading">正在下载....</string>
    <string name="pleasewait">请等待</string>
    <string name="label_shared">共享</string>
    <string name="main_setting_warnning">需要停止录像才能进入设置界面</string>
    <string name="main_enter">进入</string>
    <string name="trip">提示</string>
    <string name="exit_trip">退出后是否继续录像?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="msg_recording">开启录制</string>
    <string name="msg_stoprecord">停止录制</string>
    <string name="label_lockproetect">加锁保护灵敏度</string>
    <string name="label_formatsdcard">格式化存储卡</string>
    <string name="label_formattrip">格式化存储卡将删除卡内所有数据，请谨慎使用！</string>
    <string name="label_formatbtn">执行格式化</string>
    <string name="format_attaction">即将执行格式化存储卡操作</string>
    <string name="warnnig">警告！</string>
    <string name="ensure">确定</string>
    <string name="message_overwrite_file">文件已存在,是否覆盖?</string>
    <string name="label_parkcar">停车监控</string>
    <string name="label_video_out">视频输出</string>
    <string name="sd_browser_stoprecord">需要停止录像才能完成该操作</string>
    <string name="sd_browser_open_stoprecord">需要停止录像才能开启文档</string>
    <string name="get_more">获取更多</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="updating">最近更新：</string>
    <string name="firstversion">第一个固件版本</string>
    <string name="secondversion">第二个固件版本</string>
    <string name="title_selectversion">请选择固件版本</string>
</resources>
