<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:Main_button="http://schemas.android.com/apk/res/tw.com.a_i_t.IPCamViewer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#e36713"
	android:orientation="vertical"
	android:gravity="center"
	tools:context=".MainActivity" >
	<LinearLayout
		android:layout_gravity="center_horizontal"
		android:layout_width="350dp"
		android:layout_height="550dp"
		android:orientation="vertical">
	<LinearLayout android:layout_weight="0.6"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:background="@android:color/transparent"
		>
		<ImageView android:background="@android:color/transparent"
			android:src="@drawable/app_title"
			android:layout_gravity="bottom"
			android:layout_width="220dp"
			android:layout_height="70dp" />"
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginLeft="5dp"
			android:textSize="30sp"
			android:textColor="@color/white"
			android:text="@string/function_titleName"/>
	</LinearLayout>
		<RelativeLayout
			android:layout_weight="9"
			style="@style/layout_vertical"
			android:background="@android:color/transparent"
			>
			<RelativeLayout
				android:layout_height="@dimen/main_moon_height"
				android:layout_width="@dimen/main_moon_width"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:background="@drawable/moon_bg"
				/>
			<tw.com.a_i_t.IPCamViewer.Button_main
				android:id="@+id/video_btn"
				android:layout_height="163dp"
				android:layout_width="155dp"
				android:layout_alignParentRight="false"
				Main_button:picblackground="@drawable/video_btn_seletor"
				Main_button:txt="@string/main_video"
				android:layout_marginTop="68dp"
				android:layout_marginLeft="52dp"
				android:layout_toRightOf="@+id/local_btn"/>
			<tw.com.a_i_t.IPCamViewer.Button_main
				android:id="@+id/dv_btn"
				Main_button:picblackground="@drawable/dv_btn_seletor"
				android:layout_height="86dp"
				android:layout_width="85dp"
				android:layout_marginLeft="73dp"
				android:layout_marginTop="14dp"
				Main_button:txt="@string/main_dv" />
			<tw.com.a_i_t.IPCamViewer.Button_main
				android:id="@+id/local_btn"
				android:layout_height="99dp"
				android:layout_width="95dp"
				Main_button:picblackground="@drawable/local_btn_seletor"
				android:layout_below="@+id/dv_btn"
				android:layout_marginTop="-5dp"
				android:layout_marginLeft="19dp"
				Main_button:txt="@string/main_local" />
			<tw.com.a_i_t.IPCamViewer.Button_main
				android:id="@+id/settings_btn"
				android:layout_height="@dimen/btn_main"
				android:layout_width="@dimen/btn_main"
				Main_button:picblackground="@drawable/settings_btn_seletor"
				android:layout_below="@+id/local_btn"
				android:layout_marginTop="17dp"
				android:layout_marginLeft="70dp"
				Main_button:txt="@string/main_settings" />
			<tw.com.a_i_t.IPCamViewer.Button_main
				android:id="@+id/exit_btn"
				android:layout_height="@dimen/btn_main"
				android:layout_width="@dimen/btn_main"
				android:background="@drawable/bg_exit_btn_select"
				android:layout_below="@id/settings_btn"
				android:layout_marginLeft="162dp"
				android:layout_marginTop="-39dp"
				/>

			<ImageView
				android:id="@+id/help"
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:src="@drawable/help_btn"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true"/>
		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>